--- a/Index.html
+++ b/Index.html
@@ -194,14 +194,19 @@
         <div class="carousel-item"><img src="Anuncio4.jpg" alt="Imagen 4"></div>
     </div>
 
+   
     <main>
+        <div class="title">
+            <h1>Materiales Vlady</h1>
+        </div>
+
         <div class="centered-content" style="margin-bottom: 20px;">
             <div>
-                <h2>Materiales Vlady</h2>
+                <h2>Misión.</h2>
                 <p>
-                    Bienvenidos a Materiales Vlady, donde nos comprometemos a ofrecer productos de la más alta calidad
-                    y llevarlos directamente a los lugares donde planean construir sus proyectos más extraordinarios.
-                    Descubran la excelencia en cada material, ¡haciendo realidad sus sueños de construcción!
+                    Proporcionar a nuestros clientes materiales de construcción de la más alta calidad, 
+                    ofreciendo un servicio excepcional, asesoramiento experto y soluciones integrales 
+                    para sus proyectos, contribuyendo así al éxito y la satisfacción de quienes confían en nosotros.
                 </p>
             </div>
             <img src="Img1.jpeg" alt="Descripción de la imagen">
@@ -209,11 +214,11 @@
         
         <div class="centered-content">
             <div>
-                <h2>De confianza</h2>
+                <h2>Visión.</h2>
                 <p>
-                    En Materiales Vlady, nos enorgullece ser su proveedor de confianza, comprometidos con la entrega de
-                    productos excepcionales para satisfacer sus necesidades de construcción. Nuestra dedicación va más
-                    allá de la venta; nos esforzamos por ser su socio en cada proyecto, brindándoles la calidad que merecen.
+                    Convertirnos en el proveedor líder y de referencia en el sector de materiales de construcción, 
+                    reconocidos por nuestra excelencia en el servicio al cliente y la contribución al desarrollo 
+                    de comunidades a las que servimos
                 </p>
             </div>
             <img src="Img2.jpeg" alt="Descripción de la otra imagen">
@@ -221,8 +226,6 @@
 
     </main>
 
-
-    
     <footer>
         <p>&copy; 2023 Materiales Vlady. Todos los derechos reservados.</p>
         <a href="https://maps.app.goo.gl/5KdYmh9vJqWsrL3d6"><i class="fas fa-map-marker-alt"></i> Calle faustino zanches y porvenir, 24440 Santo Domingo Kesté, Camp. </a>
