--- a/Index.html
+++ b/Index.html
@@ -224,6 +224,19 @@
             <img src="Img2.jpeg" alt="Descripción de la otra imagen">
         </div>
 
+        <div class="centered-content">
+            <div>
+                <h2>Valores.</h2>
+                <p>
+                    Calidad: Comprometidos con ofrecer productos y materiales de la más alta calidad que cumplan y superen las expectativas de nuestros clientes.
+                    Servicio al cliente: Priorizamos la satisfacción y las necesidades de nuestros clientes, brindando asesoramiento experto y un servicio personalizado.
+                    Integridad: Actuamos con honestidad, ética y transparencia en todas nuestras operaciones y relaciones comerciales.
+                    Colaboración: Valoramos el trabajo en equipo, la colaboración interna y externa para alcanzar metas comunes y fortalecer alianzas estratégicas.
+                </p>
+            </div>
+            <img src="Img2.jpeg" alt="Descripción de la otra imagen">
+        </div>
+
     </main>
 
     <footer>
