--- a/Index.html
+++ b/Index.html
@@ -240,7 +240,7 @@
                     Colaboración: Valoramos el trabajo en equipo, la colaboración interna y externa para alcanzar metas comunes y fortalecer alianzas estratégicas.
                 </p>
             </div>
-            <img src="Img2.jpeg" alt="Descripción de la otra imagen">
+            <img src="ImgVlady.jpeg" alt="Descripción de la otra imagen">
         </div>
 
     </main>
