--- a/Contacto.html
+++ b/Contacto.html
@@ -6,8 +6,8 @@
     <title>Materiales Vlady-Contacto</title>
     
     <!-- Agrega un ícono o logo a tu página -->
-    <link rel="icon" href="LogoMV.jpeg" type="image/x-icon">
-    
+    <link rel="icon" href="LogoMv.jpeg" type="image/jpeg">
+
     <!-- Incluye la biblioteca de FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-5/CS+UUvQqWH+aGMA2xCYZDRPmVnI0yv9TzL8Au66A3bmUoOdOVq4pK41M4dPLNDzufOJKk+nTkS6LUAoHNbYw==" crossorigin="anonymous" />
     <script src="https://kit.fontawesome.com/0c65349377.js" crossorigin="anonymous"></script>
