--- a/Producto.html
+++ b/Producto.html
@@ -243,7 +243,7 @@
 
 <body>
     <header>
-        <img src="LogoMV.jpeg" alt="Logo de tu negocio" class="logo"  type="image/jpeg">
+        <img src="LogoMV.jpeg" alt="Logo de tu negocio" class="logo">
         <span class="company-name">Materiales Vlady</span>
 
         <div>
