--- a/Index.html
+++ b/Index.html
@@ -174,7 +174,7 @@
 
 <body>
     <header>
-        <img src="LogoMv.jpeg" alt="Logo de tu negocio" class="logo">
+        <img src="LogoMv2.jpg" alt="Logo de tu negocio" class="logo">
         <span class="company-name">Materiales Vlady</span>
 
         <div>
