--- a/Contacto.html
+++ b/Contacto.html
@@ -129,7 +129,7 @@
 
 <body>
     <header>
-        <img src="LogoMV.jpeg" alt="Logo de tu negocio" class="logo">
+        <img src="LogoMv2.jpg" alt="Logo de tu negocio" class="logo">
         <span class="company-name">Materiales Vlady</span>
 
         <div>
