--- a/Servicios.html
+++ b/Servicios.html
@@ -133,11 +133,11 @@
         <span class="company-name">Materiales Vlady</span>
 
         <div>
-            <a href="https://baeza-san.github.io/Index.html"><i class="fas fa-home"></i> Inicio</a>
-            <a href="https://baeza-san.github.io/Producto.html"><i class="fas fa-box"></i> Productos</a>
-            <a href="https://baeza-san.github.io/Servicios.html"><i class="fa-percent"></i> Ofertas</a>
-            <a href="https://baeza-san.github.io/Proveedores.html"><i class="fas fa-truck"></i> Proveedores</a>
-            <a href="https://baeza-san.github.io/Contacto.html"><i class="fas fa-envelope"></i> Contacto</a>
+             <a href="https://baeza-san.github.io/Materiales-Vlady.github.io/Index.html"><i class="fas fa-home"></i> Inicio</a>
+            <a href="https://baeza-san.github.io/Materiales-Vlady.github.io/Producto.html"><i class="fas fa-box"></i> Productos</a>
+            <a href="https://baeza-san.github.io/Materiales-Vlady.github.io/Servicios.html"><i class="fa-percent"></i> Ofertas</a>
+            <a href="https://baeza-san.github.io/Materiales-Vlady.github.io/Proveedores.html"><i class="fas fa-truck"></i> Proveedores</a>
+            <a href="https://baeza-san.github.io/Materiales-Vlady.github.io/Contacto.html"><i class="fas fa-envelope"></i> Contacto</a>
         </div>
     </header>
 
