--- a/Servicios.html
+++ b/Servicios.html
@@ -144,7 +144,7 @@
 
     <main>
         <div class="title">
-            <h1>Servicios</h1>
+            <h1>Oferta</h1>
         </div>
         <!-- Contenido de tu página va aquí -->
         <p>Bienvenido a Materiales Vladi. Ofrecemos una amplia gama de productos y servicios. Contáctenos para más información.</p>
