--- a/Servicios.html
+++ b/Servicios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Materiales Vlady-Servicios</title>
+    <title>Materiales Vlady-Ofertas</title>
     
     <!-- Agrega un ícono o logo a tu página -->
     <link rel="icon" href="LogoMv.jpeg" type="image/jpeg">
