--- a/Producto.html
+++ b/Producto.html
@@ -505,7 +505,7 @@
                     </tr>
                         
                         <tr>
-                            <td class="product"><a href="http://127.0.0.1:5500/ProductoCemento.html"><p class="blanco">CARRETILLA REFORZADA CON BASTIDOR.</p></td>
+                            <td class="product"><a href="http://127.0.0.1:5500/ProductoCemento.html"><p class="blanco">CARRETILLA REFORZADA.</p></td>
                         </tr>
                         <tr>
                             <td class="price">$1350</td>
