--- a/Producto.html
+++ b/Producto.html
@@ -227,7 +227,7 @@
         }
 
         .product-image9 {
-            background-image: url('ProPala.png');
+            background-image: url('Propala.png');
             background-size: cover;
             width: 100%;
             height: 200px; /* ajusta la altura según tu necesidad */
@@ -241,7 +241,7 @@
         }
 
         .product-image11 {
-            background-image: url('ProTornillo2.png');
+            background-image: url('ProTornillo22.png');
             background-size: cover;
             width: 100%;
             height: 200px; /* ajusta la altura según tu necesidad */
@@ -571,7 +571,7 @@
                             </tr>
                                 
                                 <tr>
-                                    <td class="product"><a href="http://127.0.0.1:5500/ProductoCemento.html"><p class="blanco">TORNILLO AUTOPERFORANTE DE 1 PULGADA </p></td>
+                                    <td class="product"><a href="http://127.0.0.1:5500/ProductoCemento.html"><p class="blanco">TORNILLO AUTOPERFORANTE</p></td>
                                 </tr>
                                 <tr>
                                     <td class="price">$190</td>
