--- a/Producto.html
+++ b/Producto.html
@@ -213,7 +213,7 @@
         }
 
          .product-image7 {
-            background-image: url('ProPua.png');
+            background-image: url('ProPua2.png');
             background-size: cover;
             width: 100%;
             height: 200px; /* ajusta la altura según tu necesidad */
