--- a/Contacto.html
+++ b/Contacto.html
@@ -39,18 +39,20 @@
             z-index: -1;
         }
         
-        header {
-            background-color: #000; /* Color negro para el menú */
+       header {
+            background-color: #000;
             padding: 15px;
-            color: #fff; /* Color blanco para el texto del menú */
+            color: #fff;
             position: fixed;
             width: 100%;
+            height: 10%;
             top: 0;
             display: flex;
             justify-content: space-between;
             z-index: 1000;
             transition: top 0.3s;
         }
+
 
         header a {
             color: #fff; /* Color blanco para los enlaces del menú */
