--- a/Producto.html
+++ b/Producto.html
@@ -654,14 +654,15 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
 <script>
-    // Agrega el código de desplazamiento aquí
     $(document).ready(function () {
         $(window).scroll(function () {
             var contentHeight = $('body').height();
             var windowHeight = $(window).height();
             var scroll = $(window).scrollTop();
+            var distanceToBottom = contentHeight - (scroll + windowHeight);
 
-            if (contentHeight - (scroll + windowHeight) < 10) {
+            // Ajustamos la condición para que el footer aparezca solo cuando estemos cerca del final de la página
+            if (distanceToBottom < -120) { // Puedes ajustar este valor según tus necesidades
                 $('footer').fadeIn();
             } else {
                 $('footer').fadeOut();
