--- a/Contacto.html
+++ b/Contacto.html
@@ -227,19 +227,16 @@
             <div class="contact-details">
                 <div class="container2">
                     <div class="location">
-                        <h1 ><i class="fab fa-whatsapp icon"></i> Número de WhatsApp. </h1>
+                        <h1 ><i class="fab fa-whatsapp icon"></i> Número de Telefonico. </h1>
                         <p><i class="fas fa-phone-alt"></i> 982 103 7689 </p>
                         <p><i class="fas fa-phone-alt"></i> 982 102 6262 </p>
                         <h1><i class="fas fa-envelope icon"></i> Correo.</h1>
-                        <p><i class="fas fa-user"></i> Josuebaeza9000@gmail.com</p>
+                        <p><i class="fas fa-user"></i> materialesvlady@gmail.com</p>
                     </div>
                     <div class="container2">
                         <div class="location">
-                            <h1 ><i class="fab fa-whatsapp icon"></i> Número de WhatsApp. </h1>
-                            <p><i class="fas fa-phone-alt"></i> 982 103 7689 </p>
-                            <p><i class="fas fa-phone-alt"></i> 982 102 6262 </p>
-                            <h1><i class="fas fa-envelope icon"></i> Correo.</h1>
-                            <p><i class="fas fa-user"></i> Josuebaeza9000@gmail.com</p>
+                            <h1 ><i class="fab fa-whatsapp icon"></i> WhatsApp. </h1>
+                            <i class="far fa-hand-pointer"></i> Click Aqui </p>
                         </div>
                     </div>
                 </div>
