--- a/Contacto.html
+++ b/Contacto.html
@@ -236,7 +236,7 @@
                     <div class="container2">
                         <div class="location">
                             <h1 ><i class="fab fa-whatsapp icon"></i> WhatsApp. </h1>
-                            <i class="far fa-hand-pointer"></i> Click Aqui </p>
+                            <a href="https://api.whatsapp.com/send/?phone=529821037689&text&type=phone_number&app_absent=0"><i class="far fa-hand-pointer"></i> Click Aqui </p></a>
                         </div>
                     </div>
                 </div>
