--- a/Contacto.html
+++ b/Contacto.html
@@ -227,7 +227,7 @@
             <div class="contact-details">
                 <div class="container2">
                     <div class="location">
-                        <h1 ><i class="fas fa-phone-alt"></i> Número de Telefonico. </h1>
+                        <h1 ><i class="fas fa-pencil-alt"></i> Número de Telefonico. </h1>
                         <p><i class="fas fa-phone-alt"></i> 982 103 7689 </p>
                         <p><i class="fas fa-phone-alt"></i> 982 102 6262 </p>
                         <h1><i class="fas fa-envelope icon"></i> Correo.</h1>
