--- a/Servicios.html
+++ b/Servicios.html
@@ -260,7 +260,7 @@
             <img src="ProCemento2.png" alt="Producto en descuento 1" class="product-image">
             <p>Precio original: $245</p>
             <p>Precio con descuento: $100</p>
-            <a href="#" class="cta-button">Comprar ahora</a>
+            <a href="https://api.whatsapp.com/send/?phone=529821037689&text&type=phone_number&app_absent=0" class="cta-button">Comprar ahora</a>
         </div>
     </main>
 <main>
@@ -271,7 +271,7 @@
             <img src="ProMasilla.png" alt="Producto en descuento 2" class="product-image">
             <p>Precio original: $160</p>
             <p>Precio con descuento: $100</p>
-            <a href="#" class="cta-button">Comprar ahora</a>
+            <a href="https://api.whatsapp.com/send/?phone=529821037689&text&type=phone_number&app_absent=0" class="cta-button">Comprar ahora</a>
         </div>
     </div>
     
