--- a/Producto.html
+++ b/Producto.html
@@ -631,7 +631,7 @@
                                     </tr>
                                         
                                         <tr>
-                                            <td class="product"><a href="https://baeza-san.github.io/Materiales-Vlady.github.io/Servicios.html"><p class="blanco">Martillo Truper </p></td>
+                                            <td class="product"><a href="https://baeza-san.github.io/Materiales-Vlady.github.io/Servicios.html"><p class="blanco">Martillo Truper de madera</p></td>
                                         </tr>
                                         <tr>
                                             <td class="price">$150</td>
