--- a/Horario.html
+++ b/Horario.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horario de Clases</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="Images.jpeg" type="image/jpeg">
 </head>
 <body>
     <div class="container">
