--- a/Holiss/index.html
+++ b/Holiss/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>¿Me quieres?</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="CInaB.png" type="png">
 </head>
 
 <body>
