--- a/Holiss/index.html
+++ b/Holiss/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <audio src="Lee.mp3"></audio>
+ <audio src="Lee.mp3" controls autoplay loop></audio>
   <main>
     <div id="message">
       <h1>Yo te quiero más, mi amor<br>♥</h1>
